add the project github as homepage so that pypi publishing actually works

--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
     "name": "llm_complete",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "A JupyterLab extension.",
     "keywords": [
         "jupyter",
         "jupyterlab",
         "jupyterlab-extension"
     ],
-    "homepage": "",
+    "homepage": "https://github.com/pb1729/llm-complete",
     "bugs": {
-        "url": "/issues"
+        "url": "https://github.com/pb1729/llm-complete/issues"
     },
     "license": "BSD-3-Clause",
     "author": {
@@ -27,7 +27,7 @@
     "style": "style/index.css",
     "repository": {
         "type": "git",
-        "url": ".git"
+        "url": "https://github.com/pb1729/llm-complete.git"
     },
     "scripts": {
         "build": "jlpm build:lib && jlpm build:labextension:dev",
